--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,5 @@ path = "src/client.rs"
 [dependencies]
 socket2 = {version =  "0.5.9", features = ["all"] }
 tokio = { version = "1.45.0", features = ["full"] }
+serde_json = "1.0.140"
+serde = { version = "1.0", features = ["derive"] }
