--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,8 @@ socket2 = {version =  "0.5.9", features = ["all"] }
 tokio = { version = "1.45.0", features = ["full"] }
 serde_json = "1.0.140"
 serde = { version = "1.0", features = ["derive"] }
+rcgen = "0.13.2"
+base64 = "0.22.1"
+rand = "0.9.1"
+sha2 = "0.11.0-pre.5"
+hex = "0.4.3"
