--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,9 @@ serde = { version = "1.0", features = ["derive"] }
 rcgen = "0.13.2"
 base64 = "0.22.1"
 rand = "0.9.1"
-sha2 = "0.11.0-pre.5"
+sha2 = "0.10.9"
 hex = "0.4.3"
+axum = { version = "0.8.4" }
+reqwest= { version = "0.12.15", features = ["json"] }
+futures = "0.3.31"
+tokio-util = "0.7.15"
